--- a/prisma/.env
+++ b/prisma/.env
@@ -1,1 +1,1 @@
-DATABASE_URL="postgresql://postgres:postgres@localhost:5432/add-to-context-bug"
+DATABASE_URL="postgresql://postgres:postgres@localhost:5432/releasehub-server"
